--- a/estilos.css
+++ b/estilos.css
@@ -2,17 +2,21 @@ h1{
     color: blueviolet;
     font-size: 2.5rem;
     text-align: center;
-    text-decoration: underline;
+    text-decoration: underline ;
 }
 
 picture {
     width: 800px;
     height: 500px;
-    margin: auto auto   ;
-     display: flex;
+    margin: 0 auto;
+    padding-bottom: 100px;
+    display: flex;
     flex-wrap:  wrap;
+    justify-content: center;
+
 }
 img{
     width: 200px;
-    height: 150px;;
+    height: 150px;
+    margin: 0 5px;
 }
